@@ -18,6 +18,7 @@
 * Fix - Missing Default values for fields in form builder area.
 * Fix - Ajax Form Submission Smart Tag Not Working.
 * Enhancement - Row clone option added.
+* Fix - Format Email Message Content for Images and Files uploads.
 
 = 1.7.4 - 11-03-2021 =
 * Fix - Hide empty select data field from entry view.
